--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.1",
     "@headlessui/vue": "^1.7.16",
     "@heroicons/vue": "^2.0.18",
-    "autoprefixer": "^10",
     "core-js": "^3.8.3",
     "pinia": "^2.1.7",
-    "postcss": "^8",
-    "tailwindcss": "^3",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.6",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
@@ -28,6 +28,7 @@
     "autoprefixer": "^10.4.16",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "sass": "^1.69.5",
     "vue-cli-plugin-tailwind": "~3.0.0"
   },
   "eslintConfig": {
