--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/vue": "^2.0.18",
     "autoprefixer": "^10",
     "core-js": "^3.8.3",
+    "firebase": "^10.7.1",
     "pinia": "^2.1.7",
     "postcss": "^8",
     "tailwindcss": "^3",
