--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "firebase": "^10.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
